--- a/css/styles.scss
+++ b/css/styles.scss
@@ -121,3 +121,15 @@ bottom: 0px;
 z-index: 1;
 
 }
+
+//reverseTable
+.modal-header{
+    background-color: $background-dark;
+    color: floralwhite;
+    .close{
+        color: floralwhite;
+    }
+}
+.modal-body{
+    background-color: $background-pale;
+}
