--- a/css/styles.css
+++ b/css/styles.css
@@ -66,4 +66,17 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+
+.modal-header {
+  background-color: #512da8;
+  color: floralwhite;
+}
+
+.modal-header .close {
+  color: floralwhite;
+}
+
+.modal-body {
+  background-color: #d1c4e9;
+}
 /*# sourceMappingURL=styles.css.map */
